samples/_failures_safe/1761330967_11eebe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_480cf8c6.c: In function ‘main’:
./samples/SAFE/__tmp_480cf8c6.c:135:25: error: expected declaration or statement at end of input
  135 |                         return 1;
      |                         ^~~~~~
./samples/SAFE/__tmp_480cf8c6.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_480cf8c6.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_480cf8c6.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_480cf8c6.c:135:25: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_480cf8c6.c:135:25: error: expected declaration or statement at end of input
